3.eks-service-deployment/k8s-manifests/7.services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: fish-game-system
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    app: redis

---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: fish-game-system
  labels:
    app: client-service
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: client-service

---
apiVersion: v1
kind: Service
metadata:
  name: game-session-service
  namespace: fish-game-system
  labels:
    app: game-session-service
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
  selector:
    app: game-session-service

---
apiVersion: v1
kind: Service
metadata:
  name: game-server-service
  namespace: fish-game-system
  labels:
    app: game-server-service
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
  selector:
    app: game-server-service
